# kuber_demo

./: README.md  backend-deployment.yaml  backend-service.yaml  frontend_deployment.yaml  frontend_service.yaml
backend/: Dockerfile  pyproject.toml  setup.cfg
backend/app/: main.py
backend/app/api/v1/: routers.py
backend/app/api/v1/dependencies/: entity.py  repo.py
backend/app/api/v1/endpoints/: event.py
backend/app/db/: events.py  models.py  sqlalchemy.py
backend/app/db/crud/events/: repo.py
backend/app/db/error_handlers/: db.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 45d98cfa7cc7_main_tables.py
backend/app/resources/: strings.py
backend/app/schemas/: event.py
backend/app/settings/: events.py
backend/app/settings/environments/: base.py  dev.py  prod.py  test.py
backend/tests/: conftest.py
backend/tests/test_settings/: test_config.py
frontend/: .env  Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  time.scss
frontend/src/components/UI/CreateEvent/: CreateEvent.css  CreateEventForm.jsx
frontend/src/components/UI/EventInfo/: MyEventInfo.css  MyEventInfo.jsx
frontend/src/components/UI/MyNotFound/: MyNotFound.css  MyNotFound.jsx
frontend/src/components/UI/Navigation/: Navigation.jsx  Navigation.sass
frontend/src/components/UI/button/: MyButton.css  MyButton.jsx
frontend/src/components/UI/datetimepicker/: DatetimePicker.jsx
frontend/src/pages/: CreateEvent.jsx  EventInfo.jsx  EventTimeline.jsx  NotFound.jsx
frontend/src/services/: api_utils.js  cookie.js  js_utils.js
(+2 files in other folders)
